--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row row-cols-1 row-cols-lg-3 g-4">
 
         <div class="col">
-          <div class="card border border-secondary border-opacity-50 text-center h-100  ">
+          <div class="card border border-secondary border-opacity-50 text-center h-100 ">
             <div class="card-header mt-4 bg-white border-0">
               <img src="./img/emergency-call.svg" alt="">
             </div>
@@ -445,7 +445,7 @@
         </div>
 
         <div class="col">
-          <div class="card h-100 p-4" data-aos="zoom-out-left">
+          <div class="card border border-secondary border-opacity-50 h-100 p-1" data-aos="zoom-out-left">
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
@@ -524,6 +524,15 @@
     </div>
   </section>
 
+
+  <button id="backToTop" class="back-to-top" aria-label="Ir arriba">
+    <i class="fas fa-chevron-up"></i>
+  </button>
+
+  <a href="https://wa.me/78191241?text=Deseo%20agendar%20una%20cita" class="whatsapp-button text-decoration-none"
+    target="_blank" aria-label="Chat en WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+  </a>
 
 
   <footer class="footer bg-neutral text-white py-5">
