--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
   <section class="section fqa py-7 my-5">
     <div class="container">
 
-      <div class="row row-cols-1  row-cols-lg-2 ">
+      <div class="row row-cols-1  row-cols-lg-2 g-4 ">
 
         <div class="col">
           <div class="content-about p-3 d-flex flex-column align-items-start justify-content-center h-100  "
