update cards team

--- a/index.html
+++ b/index.html
@@ -328,15 +328,15 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <!-- Card 1 -->
         <div class="col">
-          <div class="card border text-center h-100">
-            <div class="card-header bg-white border-0">
+          <div class="card border border-secondary border-opacity-50 text-center h-100">
+            <div class="card-header bg-white p-0 border-0">
               <img src="img/doctor.jpg" alt="Doctor 1" class="card-img-top">
             </div>
             <div class="card-body">
               <h4 class="card-title">Dr. Juan Pérez</h4>
               <p class="card-text">Especialista en cardiología con más de 10 años de experiencia.</p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer border-0 ">
               <div class="social-icons">
                 <a href="https://facebook.com/doctorjuan" target="_blank" class="btn btn-link"><i
                     class="fab fa-facebook"></i></a>
@@ -351,15 +351,15 @@
 
         <!-- Card 2 -->
         <div class="col">
-          <div class="card border text-center h-100">
-            <div class="card-header bg-white border-0">
+          <div class="card border border-secondary border-opacity-50 text-center h-100">
+            <div class="card-header bg-white p-0 border-0">
               <img src="img/doctor.jpg" alt="Doctor 1" class="card-img-top">
             </div>
             <div class="card-body">
               <h4 class="card-title">Dra. Ana López</h4>
               <p class="card-text">Experta en pediatría, comprometida con el cuidado de los más pequeños.</p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer border-0 ">
               <div class="social-icons">
                 <a href="https://facebook.com/doctorjuan" target="_blank" class="btn btn-link"><i
                     class="fab fa-facebook"></i></a>
@@ -374,8 +374,8 @@
 
         <!-- Card 3 -->
         <div class="col">
-          <div class="card border text-center h-100">
-            <div class="card-header bg-white border-0">
+          <div class="card border border-secondary border-opacity-50 text-center h-100">
+            <div class="card-header bg-white p-0 border-0">
               <img src="img/doctor.jpg" alt="Doctor 1" class="card-img-top">
             </div>
             <div class="card-body">
@@ -383,7 +383,7 @@
               <p class="card-text">Cirujano general con un enfoque en procedimientos avanzados.</p>
             </div>
 
-            <div class="card-footer">
+            <div class="card-footer border-0 ">
               <div class="social-icons">
                 <a href="https://facebook.com/doctorjuan" target="_blank" class="btn btn-link"><i
                     class="fab fa-facebook"></i></a>
@@ -413,7 +413,7 @@
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio quisquam
                 voluptates ratione quibusdam suscipit.</p>
 
-              <a href="#" class="btn btn-lg btn-accent">Donar</a>
+              <a href="#" class="btn btn-lg btn-outline-accent">Donar</a>
             </div>
           </div>
         </div>
@@ -445,53 +445,58 @@
         </div>
 
         <div class="col">
-          <div class="card border border-secondary border-opacity-50 h-100 p-1" data-aos="zoom-out-left">
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button " type="button" data-bs-toggle="collapse"
-                    data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
-                    Accordion Item #1
-                  </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse show"
-                  data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                    the
-                    <code>.accordion-flush</code> class. This is the first item's accordion body.
+          <div class="content-fqa d-flex flex-column align-items-start justify-content-center h-100">
+            <div class="card border-0 h-100 w-100 justify-content-center" data-aos="zoom-out-left">
+              <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item ">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button " type="button" data-bs-toggle="collapse"
+                      data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
+                      Accordion Item #1
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse show"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                      the
+                      <code>.accordion-flush</code> class. This is the first item's accordion body.
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Accordion Item #2
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                    the
-                    <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this
-                    being
-                    filled with some actual content.
+                <div class="accordion-item ">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                      Accordion Item #2
+                    </button>
+                  </h2>
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                      the
+                      <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this
+                      being
+                      filled with some actual content.
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Accordion Item #3
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse"
-                  data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                    the
-                    <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                    happening here in terms of content, but just filling up the space to make it look, at least at first
-                    glance, a bit more representative of how this would look in a real-world application.
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                      Accordion Item #3
+                    </button>
+                  </h2>
+                  <div id="flush-collapseThree" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                      the
+                      <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more
+                      exciting
+                      happening here in terms of content, but just filling up the space to make it look, at least at
+                      first
+                      glance, a bit more representative of how this would look in a real-world application.
+                    </div>
                   </div>
                 </div>
               </div>
@@ -503,7 +508,7 @@
   </section>
 
 
-  <section id="contact" class="seccion map bg-accent py-5">
+  <section id="contact" class="seccion map bg-accent py-7 mt-5">
     <div class="container">
       <div class="row">
         <div class="col-12">
