Loop autoplay services

--- a/index.html
+++ b/index.html
@@ -601,6 +601,11 @@
       slidesPerView: 1,
       spaceBetween: 10,
       grabCursor: true,
+      loop: true,
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+      },
       keyboard: {
         enabled: true,
       },
